<resources>
    <string name="app_name">Mis Contactos</string>
    <string name="nombre">Cristian Solis</string>
    <string name="telefono">5523078920</string>
    <string name="correo">cristian.solis.esca@hotmail.com</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pcorreo">correo</string>
    <string name="date_pick">Pick a date</string>
    <string name="pLikes">0 likes</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
