<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.cristian.itemfragment.DetalleContacto">
    <include android:id="@+id/actionbar"
        layout="@layout/actionbar"></include>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:textSize="@dimen/nombre_contacto"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/espacio"
        android:onClick="llamar">

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_48"/>
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/telefono_contacto"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/espacio"
        android:onClick="correo">

        <ImageView
            android:id="@+id/imgCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_48"/>
        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"/>
    </LinearLayout>




</LinearLayout>
