<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal"
            android:src="@drawable/peinadoma3"
            android:layout_weight="0.14" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvTelefonoCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ptelefono"
            android:layout_gravity="center"/>





        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_thumbs_up_48" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pLikes"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/telefono_contacto"/>



        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>